Reverting #575 -- need to fix another way, it breaks the seek forms since the dropdown is actually attached to the root document

--- a/liwords-ui/src/base.scss
+++ b/liwords-ui/src/base.scss
@@ -179,10 +179,6 @@ ul {
   }
 }
 
-.ant-modal-wrap {
-  z-index: 1150;
-}
-
 .ant-tag {
   font-weight: 800;
   color: #414141;
